# nrf-ble-driver-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: adapter.rs  packets.rs
src/: adapter.rs  api.rs  error.rs  lib.rs
src/nrf/: adapter.rs  ble.rs  gap.rs  gatt.rs  gattc.rs  gatts.rs  l2cap.rs  mod.rs
src/sd_api_v6/: ble.rs  ble_driver.rs  gap.rs  gatt.rs  gattc.rs  gatts.rs  mod.rs
src/transport/: h5.rs  mod.rs  serial.rs  slip.rs
