[package]
name = "nrf-sd-api"
version = "0.1.0"
authors = ["Matt <matt@graynode.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serial = "5.4.4"
async-trait = "0.1.52"
futures = "0.3"
bytes = "1.1.0"
num_enum = "0.5.7"